[gd_scene load_steps=14 format=2]

[ext_resource path="res://scene/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/ColorRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/AudioStreamPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://meteoro.tscn" type="PackedScene" id=4]
[ext_resource path="res://Area2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://tiles/meu_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://scene/personagem.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/script_fase.gd" type="Script" id=8]
[ext_resource path="res://scene/cena_inimigo2.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/cena_boss_agente.tscn" type="PackedScene" id=10]
[ext_resource path="res://img/spaceship.png" type="Texture" id=11]
[ext_resource path="res://scene/script_fase2.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 139.348

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" parent="HUD" instance=ExtResource( 2 )]

[node name="Area2D" parent="HUD" instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 3 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1310766, 0, 0, 1310767, 0, 0, 1310768, 0, 0, 1310769, 0, 0, 1310770, 0, 0, 1310771, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1638454, 0, 0, 1638455, 0, 0, 1638456, 0, 0, 1638457, 0, 0, 1638458, 0, 0, 1638459, 0, 0, 1638460, 0, 0, 1638461, 0, 0, 1638462, 0, 0, 1703951, 0, 0, 1703952, 0, 0, 1703953, 0, 0, 1703954, 0, 0, 1703955, 0, 0, 1703956, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1704154, 0, 0, 1704155, 0, 0, 1704156, 0, 0, 1704157, 0, 0, 1704158, 0, 0, 1704159, 0, 0, 1704160, 0, 0, 1704161, 0, 0, 1704162, 0, 0, 1900612, 0, 0, 1900613, 0, 0, 1900614, 0, 0, 1900615, 0, 0, 1900616, 0, 0, 1900617, 0, 0, 1900618, 0, 0, 1900657, 0, 0, 1900658, 0, 0, 1900659, 0, 0, 1900660, 0, 0, 1900661, 0, 0, 1900662, 0, 0, 1900663, 0, 0, 1900664, 0, 0, 1900665, 0, 0, 1900666, 0, 0, 1900667, 0, 0, 1900668, 0, 0, 1900669, 0, 0, 1900751, 0, 0, 1900752, 0, 0, 1900753, 0, 0, 1900754, 0, 0, 1900755, 0, 0, 1900756, 0, 0, 1966312, 0, 0, 1966313, 0, 0, 1966314, 0, 0, 1966315, 0, 0, 1966316, 0, 0, 1966317, 0, 0, 1966318, 0, 0, 1966319, 0, 0, 1966360, 0, 0, 1966361, 0, 0, 1966362, 0, 0, 1966363, 0, 0, 1966364, 0, 0, 1966365, 0, 0, 1966366, 0, 0, 1966367, 0, 0, 1966368, 0, 0, 1966369, 0, 0, 1966370, 0, 0, 1966371, 0, 0, 1966372, 0, 0, 2097246, 0, 0, 2097247, 0, 0, 2097248, 0, 0, 2097249, 0, 0, 2097250, 0, 0, 2097251, 0, 0, 2097252, 0, 0, 2097253, 0, 0, 2097254, 0, 0, 2097255, 0, 0, 2097256, 0, 0, 2097257, 0, 0, 2097258, 0, 0, 2097259, 0, 0, 2097260, 0, 0, 2097282, 0, 0, 2097283, 0, 0, 2097284, 0, 0, 2097285, 0, 0, 2097286, 0, 0, 2097287, 0, 0, 2097288, 0, 0, 2162848, 0, 0, 2162849, 0, 0, 2162850, 0, 0, 2162851, 0, 0, 2162852, 0, 0, 2162853, 0, 0, 2162854, 0, 0, 2162855, 0, 0, 2162856, 0, 0, 2162857, 0, 0, 2162858, 0, 0, 2162859, 0, 0, 2162860, 0, 0, 2162881, 0, 0, 2162882, 0, 0, 2162883, 0, 0, 2162884, 0, 0, 2162885, 0, 0, 2162886, 0, 0, 2162887, 0, 0, 2162888, 0, 0, 2162889, 0, 0, 2162890, 0, 0, 2162891, 0, 0, 2162932, 0, 0, 2162933, 0, 0, 2162934, 0, 0, 2162935, 0, 0, 2162936, 0, 0, 2162937, 0, 0, 2162955, 0, 0, 2162956, 0, 0, 2162957, 0, 0, 2162958, 0, 0, 2162959, 0, 0, 2162960, 0, 0, 2162961, 0, 0, 2162962, 0, 0, 2162963, 0, 0, 2162984, 0, 0, 2162985, 0, 0, 2162986, 0, 0, 2162987, 0, 0, 2162988, 0, 0, 2162989, 0, 0, 2162990, 0, 0, 2162991, 0, 0, 2162992, 0, 0, 2162993, 0, 0, 2162994, 0, 0, 2162995, 0, 0, 2162996, 0, 0, 2162997, 0, 0, 2162998, 0, 0, 2293839, 0, 0, 2293840, 0, 0, 2293841, 0, 0, 2293842, 0, 0, 2293843, 0, 0, 2293844, 0, 0, 2293845, 0, 0, 2293846, 0, 0, 2293847, 0, 0, 2293848, 0, 0, 2293849, 0, 0, 2359436, 0, 0, 2359437, 0, 0, 2359438, 0, 0, 2359439, 0, 0, 2359440, 0, 0, 2359441, 0, 0, 2359442, 0, 0, 2359443, 0, 0, 2359444, 0, 0, 2359445, 0, 0, 2359446, 0, 0, 2359447, 0, 0, 2359448, 0, 0, 2359449, 0, 0, 2359450, 0, 0, 2359474, 0, 0, 2359475, 0, 0, 2359476, 0, 0, 2359477, 0, 0, 2359478, 0, 0, 2359479, 0, 0, 2359480, 0, 0, 2359481, 0, 0, 2359482, 0, 0, 2359483, 0, 0, 2359484, 0, 0, 2359550, 0, 0, 2359551, 0, 0, 2359552, 0, 0, 2359553, 0, 0, 2359554, 0, 0, 2359555, 0, 0, 2359556, 0, 0, 2359557, 0, 0, 2359558, 0, 0, 2425149, 0, 0, 2425150, 0, 0, 2425151, 0, 0, 2425152, 0, 0, 2425153, 0, 0, 2425154, 0, 0, 2425155, 0, 0, 2425156, 0, 0, 2425157, 0, 0, 2425158, 0, 0, 2425159, 0, 0, 2425160, 0, 0, 2425161, 0, 0, 2425162, 0, 0, 2425163, 0, 0, 2425164, 0, 0, 2425165, 0, 0, 2425166, 0, 0, 2425167, 0, 0, 2425168, 0, 0, 2425169, 0, 0, 2425170, 0, 0, 2425171, 0, 0, 2425172, 0, 0, 2425173, 0, 0, 2425174, 0, 0, 2425175, 0, 0, 2425176, 0, 0, 2425177, 0, 0, 2425178, 0, 0, 2425179, 0, 0, 2425180, 0, 0, 2425181, 0, 0 )

[node name="alienn" parent="." instance=ExtResource( 7 )]
position = Vector2( 18.0455, 298.333 )

[node name="meteoro" parent="." instance=ExtResource( 4 )]

[node name="repor" parent="." instance=ExtResource( 9 )]
position = Vector2( 718.209, 283.673 )

[node name="repor2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1315.56, 519.961 )

[node name="repor3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1861.24, 424.403 )

[node name="repor4" parent="." instance=ExtResource( 9 )]
position = Vector2( 2286.51, 531.806 )

[node name="repor5" parent="." instance=ExtResource( 9 )]
position = Vector2( 3130.67, 485.428 )

[node name="repor6" parent="." instance=ExtResource( 9 )]
position = Vector2( 4524.42, 440.238 )

[node name="repor7" parent="." instance=ExtResource( 9 )]
position = Vector2( 4787.62, 486.487 )

[node name="fase2" type="Area2D" parent="."]
z_index = -1
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="fase2"]
position = Vector2( 5551.3, 519.364 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="fase2"]
position = Vector2( 5555.7, 457.274 )
shape = SubResource( 1 )

[node name="Node2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 4682.39, 203.282 )
[connection signal="body_entered" from="HUD/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="meteoro" to="." method="_on_meteoro_timeout"]
[connection signal="body_entered" from="fase2" to="fase2" method="_on_fase2_body_entered"]
